[tool.poetry]
name = "enj-alice"
version = "0.1.0"
description = "EnjAlice is a asynchronous framework for Yandex Alice API"
authors = ["jotty <bard143games@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
